// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal with content renders correctly 1`] = `
<div
  className="modal-wrapper  "
  data-testid="modal-container"
>
  <div
    className="modal"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    <span
      className="close-button"
      data-testid="close-button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
          />
        </g>
      </svg>
    </span>
    <header
      style={Object {}}
    />
    <div
      className="modal-main"
      data-testid="modal-main"
    >
      <div>
        <h3>
          Modal content
        </h3>
        <p>
          Modal subtitle
        </p>
      </div>
    </div>
    <footer
      style={Object {}}
    />
  </div>
</div>
`;

exports[`simple modal renders correctly 1`] = `
<div
  className="modal-wrapper  "
  data-testid="modal-container"
>
  <div
    className="modal"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    <span
      className="close-button"
      data-testid="close-button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
          />
        </g>
      </svg>
    </span>
    <header
      style={Object {}}
    />
    <footer
      style={Object {}}
    />
  </div>
</div>
`;
